--- a/embedded/test_freertos/MDK/test_freertos.uvprojx
+++ b/embedded/test_freertos/MDK/test_freertos.uvprojx
@@ -409,11 +409,6 @@
           <GroupName>driver</GroupName>
           <Files>
             <File>
-              <FileName>hc32f46x_icg.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
-            </File>
-            <File>
               <FileName>hc32f46x_interrupts.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_interrupts.c</FilePath>
@@ -447,6 +442,11 @@
               <FileName>hc32f46x_gpio.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_gpio.c</FilePath>
+            </File>
+            <File>
+              <FileName>hc32f46x_icg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -569,8 +569,8 @@
       <TargetName>ramcode</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6140001::V6.14.1::ARMCLANG</pCCUsed>
-      <uAC6>1</uAC6>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>HC32F460JEUA</Device>
@@ -611,7 +611,7 @@
           <OutputName>ramcode</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
-          <CreateHexFile>1</CreateHexFile>
+          <CreateHexFile>0</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
           <ListingPath>.\output\ramcode\</ListingPath>
@@ -648,7 +648,7 @@
             <nStopA1X>0</nStopA1X>
             <nStopA2X>0</nStopA2X>
           </AfterMake>
-          <SelectedForBatchBuild>0</SelectedForBatchBuild>
+          <SelectedForBatchBuild>1</SelectedForBatchBuild>
           <SVCSIdString></SVCSIdString>
         </TargetCommonOption>
         <CommonProperty>
@@ -691,7 +691,7 @@
             <UseTargetDll>1</UseTargetDll>
             <UseExternalTool>0</UseExternalTool>
             <RunIndependent>0</RunIndependent>
-            <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
+            <UpdateFlashBeforeDebugging>0</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
             <DriverSelection>4096</DriverSelection>
           </Flash1>
@@ -760,7 +760,7 @@
             <NoZi2>0</NoZi2>
             <NoZi3>0</NoZi3>
             <NoZi4>0</NoZi4>
-            <NoZi5>0</NoZi5>
+            <NoZi5>1</NoZi5>
             <Ro1Chk>0</Ro1Chk>
             <Ro2Chk>0</Ro2Chk>
             <Ro3Chk>0</Ro3Chk>
@@ -834,8 +834,8 @@
               </OCR_RVCT3>
               <OCR_RVCT4>
                 <Type>1</Type>
-                <StartAddress>0x1fff8000</StartAddress>
-                <Size>0x8000</Size>
+                <StartAddress>0x20000000</StartAddress>
+                <Size>0x10000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -859,8 +859,8 @@
               </OCR_RVCT8>
               <OCR_RVCT9>
                 <Type>0</Type>
-                <StartAddress>0x20000000</StartAddress>
-                <Size>0x27000</Size>
+                <StartAddress>0x20010000</StartAddress>
+                <Size>0x10000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -872,7 +872,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>0</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -881,7 +881,7 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>3</wLevel>
+            <wLevel>2</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
@@ -896,7 +896,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>__DEBUG,HC32F46x,USE_DEVICE_DRIVER_LIB,ARM_MATH_CM4,_CC_ARM,__TARGET_FPU_VFP,__FPU_PRESENT,ARM_MATH_MATRIX_CHECK,ARM_MATH_ROUNDING,SYSTEM_GLOBAL</Define>
+              <Define>__DEBUG,HC32F46x,USE_DEVICE_DRIVER_LIB,ARM_MATH_CM4,_CC_ARM,__TARGET_FPU_VFP,__FPU_PRESENT,ARM_MATH_MATRIX_CHECK,ARM_MATH_ROUNDING,SYSTEM_GLOBAL,USE_RAMCODE</Define>
               <Undefine></Undefine>
               <IncludePath>C:\Keil_v5\ARM\include;..\MDK;..\source;..\common;..\driver\inc;..\driver\src;..\application\rtt;..\application\tuya;..\application\adc;..\application\led;..\application\usart;..\application\timer;..\application\matlab;..\application\fifo;..\application\app;..\application\clk;..\application\shell;..\application\pwm;..\DSP;..\DSP\Include;..\FreeRTOS\include;..\FreeRTOS\ARM_CM4F</IncludePath>
             </VariousControls>
@@ -929,7 +929,7 @@
             <TextAddressRange>0x00000000</TextAddressRange>
             <DataAddressRange>0x1FFF8000</DataAddressRange>
             <pXoBase></pXoBase>
-            <ScatterFile>.\output\debug\adc_03_sa_interrupt.sct</ScatterFile>
+            <ScatterFile></ScatterFile>
             <IncludeLibs></IncludeLibs>
             <IncludeLibsPath></IncludeLibsPath>
             <Misc>--keep=*Handler</Misc>
@@ -968,11 +968,6 @@
           <GroupName>driver</GroupName>
           <Files>
             <File>
-              <FileName>hc32f46x_icg.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
-            </File>
-            <File>
               <FileName>hc32f46x_interrupts.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_interrupts.c</FilePath>
@@ -1006,6 +1001,11 @@
               <FileName>hc32f46x_gpio.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\driver\src\hc32f46x_gpio.c</FilePath>
+            </File>
+            <File>
+              <FileName>hc32f46x_icg.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\driver\src\hc32f46x_icg.c</FilePath>
             </File>
           </Files>
         </Group>
