test_axf: update ram.ini

--- a/embedded/test_axf/MDK/ram.ini
+++ b/embedded/test_axf/MDK/ram.ini
@@ -4,7 +4,7 @@ FUNC void Setup (void) {
     _WDWORD(0xE000ED08, 0x1FFF8000);  // Setup Vector Table Offset Register
 }
 
-LOAD output\ramcode\ramcode.axf INCREMENTAL                  //Download
+LOAD %L CLEAR INCREMENTAL            //Download
 Setup();                             // Setup forRunning
 //g, main
 //g, SystemInit
