test_pwm: add pt32 support in burnaxf tool

--- a/embedded/test_pwm/MDK/test_pwm.uvprojx
+++ b/embedded/test_pwm/MDK/test_pwm.uvprojx
@@ -659,7 +659,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"burnaxf" (-hc32 "#L")</Flash3>
+          <Flash3>"burnaxf" (-pt32 "#L")</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
