test_uart: use jlink as debug and download

--- a/embedded/test_uart/MDK/JLinkSettings.ini
+++ b/embedded/test_uart/MDK/JLinkSettings.ini
@@ -1,4 +1,5 @@
 [BREAKPOINTS]
+ForceImpTypeAny = 0
 ShowInfoWin = 1
 EnableFlashBP = 2
 BPDuringExecution = 0
@@ -6,10 +7,15 @@ BPDuringExecution = 0
 CFISize = 0x00
 CFIAddr = 0x00
 [CPU]
+MonModeVTableAddr = 0xFFFFFFFF
+MonModeDebug = 0
+MaxNumAPs = 0
+LowPowerHandlingMode = 0
 OverrideMemMap = 0
 AllowSimulation = 1
 ScriptFile=""
 [FLASH]
+EraseType = 0x00
 CacheExcludeSize = 0x00
 CacheExcludeAddr = 0x00
 MinNumBytesFlashDL = 0
@@ -18,7 +24,7 @@ VerifyDownload = 1
 AllowCaching = 1
 EnableFlashDL = 2
 Override = 1
-Device="Unspecified"
+Device="Cortex-M4"
 [GENERAL]
 WorkRAMSize = 0x00
 WorkRAMAddr = 0x00
