test_gpio: add VECT_TAB_SRAM switch

--- a/embedded/test_gpio/MDK/ram.ini
+++ b/embedded/test_gpio/MDK/ram.ini
@@ -6,7 +6,7 @@ FUNC void Setup (void) {
 
 LOAD %L CLEAR INCREMENTAL            //Download
 Setup();                             // Setup forRunning
-g, main
-//g, SystemInit
+//g, main
+g, SystemInit
 //g, SET_SRAM3_WAIT
 
